--- a/css/master.css
+++ b/css/master.css
@@ -4,6 +4,7 @@
   }
 
 body {
+      padding: 30px;
       background-color: #2c2c2c;
       }
 
@@ -38,7 +39,7 @@ table {
 
 .search-th3 {
             width: 220px;
-text-align: right;
+            text-align: right;
             }
 
 .tree-dots-th1 {
@@ -92,4 +93,18 @@ img {
 .dots {
       text-align: right;
       padding-right: 10px;
+      }
+
+.search {
+        border-radius: 8px;
+        margin-right: 10px;
+        width: 200px;
+        height: 25px;
+        background-color: #483737;
+        border-style: hidden;
+        color: #818181;
+        }
+
+input {
+      padding-left: 10px;
       }
