--- a/css/master.css
+++ b/css/master.css
@@ -99,14 +99,10 @@ img {
         background-color: #483737;
         border-style: hidden;
         color: #818181;
-        background-image: url('../icon/search-gr.svg');
-
-        background-position: left 5% center;
-        background-repeat: no-repeat;
         }
 
 input {
-  background-image: url(../icon/search-gr.svg);
+  background-image: url(../icons/search-gr.svg);
   background-size: 15px;
   background-position: left 5% center;
   background-repeat: no-repeat;
